--- a/ServerRemote/package.json
+++ b/ServerRemote/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@types/node": "^8.0.14",
     "typescript": "^3.2.2"
+  },
+  "dependencies": {
+    "mime": "^2.4.4"
   }
 }
