--- a/ServerRemote/package.json
+++ b/ServerRemote/package.json
@@ -7,8 +7,8 @@
     "name": ""
   },
   "scripts": {
-    "build": "tsc --build && tsc --project \"./static\"",
-    "clean": "tsc --build --clean && tsc --project \"./static\" --clean"
+    "build": "tsc --build && tsc --build client",
+    "clean": "tsc --build --clean && tsc --build client --clean"
   },
   "devDependencies": {
     "@types/node": "^8.0.14",
